# Waggo

./: .gitignore  README.md  config.json  package-lock.json  package.json  project_data_archive.txt  render.yaml  requirements.txt  server.js  shimmer.py
arbitrage_core/: m10_secret_key_validator.py  m11_user_authentication.py  m12_key_graph_node.py  m13_revenue_event_model.py  m1_global_configuration_loader.py  m2_environment_variable_sanitizer.py  m3_asynchronous_logging_daemon.py  m4_database_connection_pool.py  m5_sqlalchemy_orm_initializer.py  m6_flask_app_factory.py  m7_error_handling_middleware.py  m8_request_rate_limiter.py  m9_encryption_key_rotator.py
awg/: AWG10_SafetyBreaker.js  AWG11_OpportunityEscrow.js  AWG12_PriorityElevator.js  AWG13_RetryScheduler.js  AWG14_ArtifactLedgerBridge.js  AWG15_CostAttributionEngine.js  AWG16_EndpointFailover.js  AWG17_CircuitHealthReporter.js  AWG18_ColdStartWarmer.js  AWG19_RegionAwareRouter.js  AWG1_FlashbotsAcquisitionCore.js  (+14 more)
project-symbiot/backend/: .env.example  pyproject.toml  requirements.txt
project-symbiot/backend/app/: main.py
project-symbiot/backend/app/api/: schemas.py
project-symbiot/backend/app/core/: config.py
project-symbiot/backend/app/db/: sqlite.py
project-symbiot/backend/app/modules/fee_sweeper/: router.py  service.py
project-symbiot/backend/app/modules/neuro_sync/: router.py  service.py
project-symbiot/backend/app/modules/quantum/: router.py  service.py
project-symbiot/backend/app/utils/: logging.py
project-symbiot/backend/tests/: test_health.py  test_neuro.py  test_sweeper.py
(+8 files in other folders)
