[project]
name = "project-symbiot"
version = "0.1.0"
description = "Project Symbiot - Unified Omnichannel Protocol"
requires-python = ">=3.10"
dependencies = [
"fastapi>=0.111",
"uvicorn[standard]>=0.30",
"pydantic>=2.7",
"pydantic-settings>=2.3",
"httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
